grammar/OGCodeParser.py
# Generated from OGCode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class OGCodeParser ( Parser ):

    grammarFileName = "OGCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'++'", "'--'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'and'", "'or'", "'true'", "'false'", "','", 
                     "';'", "<INVALID>", "<INVALID>", "'['", "']'", "'('", 
                     "')'", "'{'", "'}'", "'function'", "'let'", "'repeat'", 
                     "'while'", "'if'", "'else'", "'elseif'", "'return'", 
                     "'break'", "'start'" ]

    symbolicNames = [ "<INVALID>", "ASSIGNMENT_OPERATOR", "PLUS_OPERATOR", 
                      "MINUS_OPERATOR", "MULTIPLY_OPERATOR", "DIVIDE_OPERATOR", 
                      "MODULO_OPERATOR", "INCREMENT_OPERATOR", "DECREMENT_OPERATOR", 
                      "EQUAL_OPERATOR", "UNEQUAL_OPERATOR", "LESSER_OPERATOR", 
                      "GREATER_OPERATOR", "LESSER_OR_EQUAL_OPERATOR", "GREATER_OR_EQUAL_OPERATOR", 
                      "AND_KEYWORD", "OR_KEYWORD", "BOOLEAN_TRUE", "BOOLEAN_FALSE", 
                      "COMMA_SEPARATOR", "SEMICOLON_SEPARATOR", "LINE_COMMENT", 
                      "BLOCK_COMMENT", "LEFT_BRACKET", "RIGHT_BRACKET", 
                      "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", "LEFT_BRACE", 
                      "RIGHT_BRACE", "FUNCTION_KEYWORD", "LET_KEYWORD", 
                      "REPEAT_KEYWORD", "WHILE_KEYWORD", "IF_KEYWORD", "ELSE_KEYWORD", 
                      "ELSEIF_KEYWORD", "RETURN_KEYWORD", "BREAK_KEYWORD", 
                      "START_KEYWORD", "FUNCTIONS_KEYWORDS", "IDENTIFIER", 
                      "NUMBER", "WS", "STRING" ]

    RULE_program = 0
    RULE_funcDefinition = 1
    RULE_startFunction = 2
    RULE_otherFunction = 3
    RULE_parametersDefinition = 4
    RULE_returnStatement = 5
    RULE_body = 6
    RULE_incrementDecrementStatement = 7
    RULE_ifStatement = 8
    RULE_elseIfStatement = 9
    RULE_elseStatement = 10
    RULE_loopStatement = 11
    RULE_variableDefinition = 12
    RULE_assignmentStatement = 13
    RULE_assignment = 14
    RULE_expressionStatement = 15
    RULE_expression = 16
    RULE_condition = 17
    RULE_commentStatement = 18
    RULE_commandBlock = 19
    RULE_parameters = 20

    ruleNames =  [ "program", "funcDefinition", "startFunction", "otherFunction", 
                   "parametersDefinition", "returnStatement", "body", "incrementDecrementStatement", 
                   "ifStatement", "elseIfStatement", "elseStatement", "loopStatement", 
                   "variableDefinition", "assignmentStatement", "assignment", 
                   "expressionStatement", "expression", "condition", "commentStatement", 
                   "commandBlock", "parameters" ]

    EOF = Token.EOF
    ASSIGNMENT_OPERATOR=1
    PLUS_OPERATOR=2
    MINUS_OPERATOR=3
    MULTIPLY_OPERATOR=4
    DIVIDE_OPERATOR=5
    MODULO_OPERATOR=6
    INCREMENT_OPERATOR=7
    DECREMENT_OPERATOR=8
    EQUAL_OPERATOR=9
    UNEQUAL_OPERATOR=10
    LESSER_OPERATOR=11
    GREATER_OPERATOR=12
    LESSER_OR_EQUAL_OPERATOR=13
    GREATER_OR_EQUAL_OPERATOR=14
    AND_KEYWORD=15
    OR_KEYWORD=16
    BOOLEAN_TRUE=17
    BOOLEAN_FALSE=18
    COMMA_SEPARATOR=19
    SEMICOLON_SEPARATOR=20
    LINE_COMMENT=21
    BLOCK_COMMENT=22
    LEFT_BRACKET=23
    RIGHT_BRACKET=24
    LEFT_PARENTHESIS=25
    RIGHT_PARENTHESIS=26
    LEFT_BRACE=27
    RIGHT_BRACE=28
    FUNCTION_KEYWORD=29
    LET_KEYWORD=30
    REPEAT_KEYWORD=31
    WHILE_KEYWORD=32
    IF_KEYWORD=33
    ELSE_KEYWORD=34
    ELSEIF_KEYWORD=35
    RETURN_KEYWORD=36
    BREAK_KEYWORD=37
    START_KEYWORD=38
    FUNCTIONS_KEYWORDS=39
    IDENTIFIER=40
    NUMBER=41
    WS=42
    STRING=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDefinition(self):
            return self.getTypedRuleContext(OGCodeParser.FuncDefinitionContext,0)


        def getRuleIndex(self):
            return OGCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = OGCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.funcDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def startFunction(self):
            return self.getTypedRuleContext(OGCodeParser.StartFunctionContext,0)


        def otherFunction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGCodeParser.OtherFunctionContext)
            else:
                return self.getTypedRuleContext(OGCodeParser.OtherFunctionContext,i)


        def getRuleIndex(self):
            return OGCodeParser.RULE_funcDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDefinition" ):
                listener.enterFuncDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDefinition" ):
                listener.exitFuncDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDefinition" ):
                return visitor.visitFuncDefinition(self)
            else:
                return visitor.visitChildren(self)




    def funcDefinition(self):

        localctx = OGCodeParser.FuncDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.startFunction()
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 45
                self.otherFunction()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StartFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_KEYWORD(self):
            return self.getToken(OGCodeParser.FUNCTION_KEYWORD, 0)

        def START_KEYWORD(self):
            return self.getToken(OGCodeParser.START_KEYWORD, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.RIGHT_PARENTHESIS, 0)

        def LEFT_BRACE(self):
            return self.getToken(OGCodeParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(OGCodeParser.RIGHT_BRACE, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGCodeParser.BodyContext)
            else:
                return self.getTypedRuleContext(OGCodeParser.BodyContext,i)


        def getRuleIndex(self):
            return OGCodeParser.RULE_startFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStartFunction" ):
                listener.enterStartFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStartFunction" ):
                listener.exitStartFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStartFunction" ):
                return visitor.visitStartFunction(self)
            else:
                return visitor.visitChildren(self)




    def startFunction(self):

        localctx = OGCodeParser.StartFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_startFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(OGCodeParser.FUNCTION_KEYWORD)
            self.state = 52
            self.match(OGCodeParser.START_KEYWORD)
            self.state = 53
            self.match(OGCodeParser.LEFT_PARENTHESIS)
            self.state = 54
            self.match(OGCodeParser.RIGHT_PARENTHESIS)
            self.state = 55
            self.match(OGCodeParser.LEFT_BRACE)
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3864436670464) != 0):
                self.state = 56
                self.body()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(OGCodeParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OtherFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION_KEYWORD(self):
            return self.getToken(OGCodeParser.FUNCTION_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(OGCodeParser.IDENTIFIER, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.LEFT_PARENTHESIS, 0)

        def RIGHT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.RIGHT_PARENTHESIS, 0)

        def LEFT_BRACE(self):
            return self.getToken(OGCodeParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(OGCodeParser.RIGHT_BRACE, 0)

        def parametersDefinition(self):
            return self.getTypedRuleContext(OGCodeParser.ParametersDefinitionContext,0)


        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGCodeParser.BodyContext)
            else:
                return self.getTypedRuleContext(OGCodeParser.BodyContext,i)


        def returnStatement(self):
            return self.getTypedRuleContext(OGCodeParser.ReturnStatementContext,0)


        def getRuleIndex(self):
            return OGCodeParser.RULE_otherFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOtherFunction" ):
                listener.enterOtherFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOtherFunction" ):
                listener.exitOtherFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOtherFunction" ):
                return visitor.visitOtherFunction(self)
            else:
                return visitor.visitChildren(self)




    def otherFunction(self):

        localctx = OGCodeParser.OtherFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_otherFunction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(OGCodeParser.FUNCTION_KEYWORD)
            self.state = 65
            self.match(OGCodeParser.IDENTIFIER)
            self.state = 66
            self.match(OGCodeParser.LEFT_PARENTHESIS)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==30:
                self.state = 67
                self.parametersDefinition()


            self.state = 70
            self.match(OGCodeParser.RIGHT_PARENTHESIS)
            self.state = 71
            self.match(OGCodeParser.LEFT_BRACE)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3864436670464) != 0):
                self.state = 72
                self.body()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 78
                self.returnStatement()


            self.state = 81
            self.match(OGCodeParser.RIGHT_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LET_KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(OGCodeParser.LET_KEYWORD)
            else:
                return self.getToken(OGCodeParser.LET_KEYWORD, i)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(OGCodeParser.IDENTIFIER)
            else:
                return self.getToken(OGCodeParser.IDENTIFIER, i)

        def COMMA_SEPARATOR(self, i:int=None):
            if i is None:
                return self.getTokens(OGCodeParser.COMMA_SEPARATOR)
            else:
                return self.getToken(OGCodeParser.COMMA_SEPARATOR, i)

        def getRuleIndex(self):
            return OGCodeParser.RULE_parametersDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametersDefinition" ):
                listener.enterParametersDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametersDefinition" ):
                listener.exitParametersDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametersDefinition" ):
                return visitor.visitParametersDefinition(self)
            else:
                return visitor.visitChildren(self)




    def parametersDefinition(self):

        localctx = OGCodeParser.ParametersDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parametersDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(OGCodeParser.LET_KEYWORD)
            self.state = 84
            self.match(OGCodeParser.IDENTIFIER)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 85
                self.match(OGCodeParser.COMMA_SEPARATOR)
                self.state = 86
                self.match(OGCodeParser.LET_KEYWORD)
                self.state = 87
                self.match(OGCodeParser.IDENTIFIER)
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN_KEYWORD(self):
            return self.getToken(OGCodeParser.RETURN_KEYWORD, 0)

        def expressionStatement(self):
            return self.getTypedRuleContext(OGCodeParser.ExpressionStatementContext,0)


        def getRuleIndex(self):
            return OGCodeParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = OGCodeParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(OGCodeParser.RETURN_KEYWORD)
            self.state = 94
            self.expressionStatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loopStatement(self):
            return self.getTypedRuleContext(OGCodeParser.LoopStatementContext,0)


        def commandBlock(self):
            return self.getTypedRuleContext(OGCodeParser.CommandBlockContext,0)


        def SEMICOLON_SEPARATOR(self):
            return self.getToken(OGCodeParser.SEMICOLON_SEPARATOR, 0)

        def variableDefinition(self):
            return self.getTypedRuleContext(OGCodeParser.VariableDefinitionContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(OGCodeParser.ExpressionStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(OGCodeParser.IfStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(OGCodeParser.AssignmentStatementContext,0)


        def incrementDecrementStatement(self):
            return self.getTypedRuleContext(OGCodeParser.IncrementDecrementStatementContext,0)


        def commentStatement(self):
            return self.getTypedRuleContext(OGCodeParser.CommentStatementContext,0)


        def getRuleIndex(self):
            return OGCodeParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = OGCodeParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.loopStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.commandBlock()
                self.state = 98
                self.match(OGCodeParser.SEMICOLON_SEPARATOR)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 100
                self.variableDefinition()
                self.state = 101
                self.match(OGCodeParser.SEMICOLON_SEPARATOR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.expressionStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 104
                self.ifStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.assignmentStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.incrementDecrementStatement()
                self.state = 107
                self.match(OGCodeParser.SEMICOLON_SEPARATOR)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.commentStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncrementDecrementStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(OGCodeParser.IDENTIFIER, 0)

        def INCREMENT_OPERATOR(self):
            return self.getToken(OGCodeParser.INCREMENT_OPERATOR, 0)

        def DECREMENT_OPERATOR(self):
            return self.getToken(OGCodeParser.DECREMENT_OPERATOR, 0)

        def getRuleIndex(self):
            return OGCodeParser.RULE_incrementDecrementStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrementDecrementStatement" ):
                listener.enterIncrementDecrementStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrementDecrementStatement" ):
                listener.exitIncrementDecrementStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncrementDecrementStatement" ):
                return visitor.visitIncrementDecrementStatement(self)
            else:
                return visitor.visitChildren(self)




    def incrementDecrementStatement(self):

        localctx = OGCodeParser.IncrementDecrementStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_incrementDecrementStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(OGCodeParser.IDENTIFIER)
            self.state = 113
            _la = self._input.LA(1)
            if not(_la==7 or _la==8):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF_KEYWORD(self):
            return self.getToken(OGCodeParser.IF_KEYWORD, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.LEFT_PARENTHESIS, 0)

        def condition(self):
            return self.getTypedRuleContext(OGCodeParser.ConditionContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.RIGHT_PARENTHESIS, 0)

        def LEFT_BRACE(self):
            return self.getToken(OGCodeParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(OGCodeParser.RIGHT_BRACE, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGCodeParser.BodyContext)
            else:
                return self.getTypedRuleContext(OGCodeParser.BodyContext,i)


        def elseIfStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGCodeParser.ElseIfStatementContext)
            else:
                return self.getTypedRuleContext(OGCodeParser.ElseIfStatementContext,i)


        def elseStatement(self):
            return self.getTypedRuleContext(OGCodeParser.ElseStatementContext,0)


        def getRuleIndex(self):
            return OGCodeParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = OGCodeParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.match(OGCodeParser.IF_KEYWORD)
            self.state = 116
            self.match(OGCodeParser.LEFT_PARENTHESIS)
            self.state = 117
            self.condition()
            self.state = 118
            self.match(OGCodeParser.RIGHT_PARENTHESIS)
            self.state = 119
            self.match(OGCodeParser.LEFT_BRACE)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3864436670464) != 0):
                self.state = 120
                self.body()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 126
            self.match(OGCodeParser.RIGHT_BRACE)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==35:
                self.state = 127
                self.elseIfStatement()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 133
                self.elseStatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseIfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF_KEYWORD(self):
            return self.getToken(OGCodeParser.ELSEIF_KEYWORD, 0)

        def LEFT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.LEFT_PARENTHESIS, 0)

        def condition(self):
            return self.getTypedRuleContext(OGCodeParser.ConditionContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(OGCodeParser.RIGHT_PARENTHESIS, 0)

        def LEFT_BRACE(self):
            return self.getToken(OGCodeParser.LEFT_BRACE, 0)

        def RIGHT_BRACE(self):
            return self.getToken(OGCodeParser.RIGHT_BRACE, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(OGCodeParser.BodyContext)
            else:
                return self.getTypedRuleContext(OGCodeParser.BodyContext,i)


        def getRuleIndex(self):
            return OGCodeParser.RULE_elseIfStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseIfStatement" ):
                listener.enterElseIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseIfStatement" ):
                listener.exitElseIfStatement(self)
